--- a/Demo/DemoOpenAI.dproj
+++ b/Demo/DemoOpenAI.dproj
@@ -169,8 +169,8 @@
         <DCC_ExeOutput>.\Bin</DCC_ExeOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <Icon_MainIcon>Res\Icon.ico</Icon_MainIcon>
-        <UWP_DelphiLogo44>Res\Icon.png</UWP_DelphiLogo44>
+        <Icon_MainIcon>Res\Icon2.ico</Icon_MainIcon>
+        <UWP_DelphiLogo44>Res\Icon2.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>Res\Logo.png</UWP_DelphiLogo150>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
@@ -223,6 +223,10 @@
                 <Source>
                     <Source Name="MainSource">DemoOpenAI.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k270.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp270.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
                 <DeployFile LocalName="Res\Logo.png" Configuration="Debug" Class="UWP_DelphiLogo150">
@@ -247,16 +251,16 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="Bin\DemoOpenAI.exe" Configuration="Debug" Class="ProjectOutput">
-                    <Platform Name="Win32">
-                        <RemoteName>DemoOpenAI.exe</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
-                <DeployFile LocalName="Res\Icon.png" Configuration="Debug" Class="UWP_DelphiLogo44">
+                <DeployFile LocalName="Res\Icon2.png" Configuration="Debug" Class="UWP_DelphiLogo44">
                     <Platform Name="Win32">
                         <RemoteDir>Assets\</RemoteDir>
                         <RemoteName>Logo44x44.png</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Bin\DemoOpenAI.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>DemoOpenAI.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
