--- a/Demo/DemoOpenAI.dproj
+++ b/Demo/DemoOpenAI.dproj
@@ -199,13 +199,13 @@
         </DelphiCompile>
         <DCCReference Include="uDemoOpenAI.pas">
             <Form>frmDemoOpenAI</Form>
-            <FormType>fmx</FormType>
         </DCCReference>
         <DCCReference Include="..\Lib\MLOpenAI.Completions.pas"/>
         <DCCReference Include="..\Lib\MLOpenAI.Core.pas"/>
         <DCCReference Include="..\Lib\MLOpenAI.Types.pas"/>
         <DCCReference Include="..\Lib\MLOpenAI.Files.pas"/>
         <DCCReference Include="..\Lib\MLOpenAI.Finetunes.pas"/>
+        <DCCReference Include="..\Lib\MLOpenAI.Images.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
